# gitlab.entrance_monitor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  _vcpkg.json
apps/: CMakeLists.txt  main.cpp
src/: .gitignore  CMakeLists.txt
src/audio_controller/: CMakeLists.txt  audio_controller.cpp  main.cpp
src/audio_controller/impl/: blockage_result_message_handler.cpp  blockage_result_message_handler.h  sound_controller.h  sound_controller_impl.h
src/audio_controller/impl/tasks/: tasks.cpp
src/audio_controller/impl/win32/: sound_controller_win32_impl.cpp
src/audio_controller/include/audio_controller/: audio_controller.h
src/blocking_computation/: CMakeLists.txt  blocking_computation.cpp  main.cpp
src/blocking_computation/impl/: detection_message_handler.cpp  detection_message_handler.h
src/blocking_computation/include/blocking_computation/: blocking_computation.h
src/blocking_computation/interfaces/tasks/: compute_blockage_task.h
src/blocking_computation/utils/: compare_contours_area.cpp  compare_contours_area.h  match_to_shape.cpp
src/core/: CMakeLists.txt  amqp.cpp  amqp.h  configurations_impl.cpp  consumer_factory.cpp  consumer_impl.cpp  consumer_message.cpp  consumer_message.h  consumer_message_handler.cpp  core.cpp  gui_handler_impl.cpp  io_runner_impl.cpp  msgpacker.cpp  paths.cpp  ptrs.cpp  publisher.cpp  publisher_factory.cpp  publisher_impl.cpp  service.cpp  standalone.cpp  task.cpp  task_service.cpp
src/core/amqp/: amqp_connection_impl.h  amqp_io_runner_impl.h  channel_holder_impl.cpp  connection_factory.cpp
src/core/impl/: amqp.h  configuration_impl.h  configurations_impl.cpp  consumer_factory_impl.h  consumer_impl.h  gui_handler_impl.cpp  gui_handler_impl.h  io_context_impl.cpp  io_context_impl.h  io_runner_impl.cpp  io_runner_impl.h  publisher_factory.h  publisher_impl.h
src/core/impl/amqp/: amqp.cpp  amqp_connection_impl.cpp  amqp_connection_impl.h  amqp_io_context_impl.cpp  amqp_io_context_impl.h  amqp_io_runner_impl.cpp  channel_holder_impl.cpp  channel_holder_impl.h
src/core/impl/communication/: communication.cpp
src/core/impl/configurations/: configurations_azure_impl.cpp  configurations_azure_impl.h  configurations_local_impl.cpp  configurations_local_impl.h
src/core/impl/retry/: retry.cpp  retry_policy_impl.cpp  retry_policy_impl.h
src/core/include/core/: amqp.h  cancellation_token.h  communication.h  configurations.h  consumer.h  consumer_factory.h  consumer_message.h  consumer_message_handler.h  core.h  gui_handler.h  health.h  init.h  io_context.h  io_runner.h  logging.h  msgpacker.h  paths.h  ptrs.h  publisher.h  publisher_factory.h  queueFps.h  queue_fps.h  retry.h  service.h  standalone.h  string_utils.h  task.h  task_service.h  view.h
src/core/include/utils/: macros.h  mat.h  types.h  uuid.h  vector.h  worker.h
src/core/interfaces/: channel_holder.h
src/core/interfaces/amqp/: connection.h  io_context.h
src/core/utils/: mat.cpp  time.cpp  uuid.cpp  worker.cpp
src/models/: CMakeLists.txt
src/models/include/view_models/: blocking_result_view.h  computed_result_view.h  detection_result_view.h  frame_view.h
src/models/proto/view_models/: blocking_result_view.proto  computed_result_view.proto  detection_result_view.proto  frame_view.proto
src/models/view_models/: blocking_result_view.h  computed_result_view.h  detection_result_view.h  frame_view.h
src/object_detector/: CMakeLists.txt  main.cpp  object_detector.cpp
src/object_detector/impl/: download_file.cpp  download_file.h  frame_message_handler.cpp  frame_message_handler.h  object_detector_impl.cpp  object_detector_impl.h
src/object_detector/impl/tasks/: tasks.cpp
src/object_detector/include/object_detector/: object_detector.h
src/object_detector/interfaces/: detection_result.h  detector.h  tasks.h
src/object_detector/interfaces/tasks/: detect_objects_in_stream_task.h
src/object_detector/utils/: download_file.cpp  is_cuda_available.cpp
src/results_aggregator/: CMakeLists.txt  main.cpp  results_aggregator.cpp
src/results_aggregator/impl/: aggregator_impl.cpp  aggregator_impl.h  blocking_result_message_handler.cpp  blocking_result_message_handler.h
src/results_aggregator/include/results_aggregator/: aggregator.h  results_aggregator.h
src/results_aggregator/interfaces/: tasks.h
src/results_aggregator/interfaces/tasks/: publish_aggregate_results_task.h
src/services/: CMakeLists.txt
src/services/audio_controller/: CMakeLists.txt  audio_controller.cpp  main.cpp
src/services/audio_controller/interfaces/: tasks.h
src/services/blocking_computation/: CMakeLists.txt  blocking_computation.cpp  main.cpp
src/services/blocking_computation/interfaces/: tasks.h
src/services/blocking_computation/utils/: compare_contours_area.cpp  compute_intersection.cpp  compute_intersection.h  match_to_shape.h
src/services/object_detector/: CMakeLists.txt  object_detector.cpp
src/services/object_detector/impl/: object_detector_impl.cpp  object_detector_impl.h
src/services/object_detector/interfaces/: detection_result.h  detector.h  tasks.h
src/services/object_detector/utils/: download_file.cpp  download_file.h  is_cuda_available.cpp  is_cuda_available.h
src/services/results_aggregator/: CMakeLists.txt  main.cpp  results_aggregator.cpp
src/services/results_aggregator/impl/: aggregator_impl.cpp  aggregator_impl.h
src/services/stream_obtainer/: CMakeLists.txt  main.cpp  stream_obtainer.cpp
src/stream_obtainer/: .gitignore  CMakeLists.txt  main.cpp  stream_obtainer.cpp  stream_subscriber.cpp  stream_subscriber.h
src/stream_obtainer/interfaces/: frames_queue.h  tasks.h
src/utils/: CMakeLists.txt  mat.cpp  packed.cpp  time.cpp
src/web/api/: api.sln
src/web/client/: package.json
tests/: CMakeLists.txt  main.cpp
tests/core/: CMakeLists.txt  cancellation_token_test.cpp  queue_fps_test.cpp  task_test.cpp  test.cpp
tests/core/impl/: configurations_impl_test.cpp
tests/core/mock/: azure_secret_client_mock.h  configurations_mock.cpp  configurations_mock.h
tests/utils/: CMakeLists.txt  temp_test.cpp  vector_test.cpp
(+149 files in other folders)
